--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <div class="demos">
     <button class="btn-city-select">城市选择</button><br>
-    <button class="btn-time-select">时间选择器</button>
+    <button class="btn-time-select">时间选择器2222222222222222222</button>
 </div>
 
 
